--- a/src/c/CudaImageProccessing.vcxproj
+++ b/src/c/CudaImageProccessing.vcxproj
@@ -127,8 +127,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <AdditionalDependencies>cudart.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>echo copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
-copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
+      <Command>echo copy "$(CudaToolkitBinDir)\cudart64*.dll" "$(OutDir)"
+copy "$(CudaToolkitBinDir)\cudart64*.dll" "$(OutDir)"
 echo copy $(SolutionDir)Output\$(ProjectName)\$(Configuration)_$(PlatformName)\*.dll $(SolutionDir)..\..\bin\$(Configuration)_$(PlatformName)\.
 xcopy /T /I /Y $(SolutionDir)Output\$(ProjectName)\$(Configuration)_$(PlatformName)\*.dll $(SolutionDir)..\..\bin\$(Configuration)_$(PlatformName)\.
 copy $(SolutionDir)Output\$(ProjectName)\$(Configuration)_$(PlatformName)\*.dll $(SolutionDir)..\..\bin\$(Configuration)_$(PlatformName)\.
@@ -189,8 +189,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <AdditionalDependencies>cudart.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>echo copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
-copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"
+      <Command>echo copy "$(CudaToolkitBinDir)\cudart64*.dll" "$(OutDir)"
+copy "$(CudaToolkitBinDir)\cudart64*.dll" "$(OutDir)"
 echo copy $(SolutionDir)Output\$(ProjectName)\$(Configuration)_$(PlatformName)\*.dll $(SolutionDir)..\..\bin\$(Configuration)_$(PlatformName)\.
 xcopy /T /I /Y $(SolutionDir)Output\$(ProjectName)\$(Configuration)_$(PlatformName)\*.dll $(SolutionDir)..\..\bin\$(Configuration)_$(PlatformName)\.
 copy $(SolutionDir)Output\$(ProjectName)\$(Configuration)_$(PlatformName)\*.dll $(SolutionDir)..\..\bin\$(Configuration)_$(PlatformName)\.
