--- a/src/c/CudaImageProccessing.vcxproj.filters
+++ b/src/c/CudaImageProccessing.vcxproj.filters
@@ -23,5 +23,16 @@
     <ClInclude Include="CudaImageProccessing\CudaImageBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CudaImageProccessing\CHelpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CudaImageProccessing\Defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="CudaImageProccessing\main.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
   </ItemGroup>
 </Project>
